[package]
name = "rust-grad"
version = "0.1.0"
authors = ["RustyBamboo <daniel@volya.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {git = "https://github.com/RustyBamboo/ndarray", branch="wgpu"}
# ndarray = { path = "../ndarray" }
futures = "*"
enum_dispatch = "0.3"

[[bin]]
name = "optimize"
path = "src/bin.rs"
